新增门店接口
