# mahu-admin/mahu-admin-infra/src/main/java/cool/houge/mahu/admin/system/repository/AuditJourBeanPersistController.java
@@ -1,7 +1,9 @@
 package cool.houge.mahu.admin.system.repository;
 
-import cool.houge.mahu.entity.system.*;
 import cool.houge.mahu.common.Metadata;
+import cool.houge.mahu.entity.Brand;
+import cool.houge.mahu.entity.market.Shop;
+import cool.houge.mahu.entity.system.*;
 import io.ebean.bean.EntityBean;
 import io.ebean.event.BeanPersistAdapter;
 import io.ebean.event.BeanPersistRequest;
@@ -28,7 +30,11 @@ public class AuditJourBeanPersistController extends BeanPersistAdapter {
                 || cls == Client.class
                 || cls == Role.class
                 || cls == Department.class
-                || cls == Employee.class;
+                || cls == Employee.class
+                // 品牌
+                || cls == Brand.class
+                // 商店
+                || cls == Shop.class;
     }
 
     @Override
